# gnome-control-center

./: meson.build
.pc/: applied-patches
debian/: changelog  control  control.in  gnome-control-center.pkla
debian/patches/: Applied-to-the-system-immediately-when-chaning-wired-netw.patch  Change-background-function-that-can-t-set-the-background-.patch  Change-the-translation-due-to-the-consistency.patch  Disable-Alternate-Character.patch  FIX-Fix-focus-chain-to-allow-move-with-tab.patch  Hide-the-parental-control-tap.patch  Modified-from-lsb-release-to-os-release.patch  Modify-network-code-error.patch  Remove-font-panel-from-control-center.patch  Remove-theme-panel-from-control-center.patch  Revert-build-Bump-build-dependency-on-polkit.patch  background-preview-change.patch  changed-default-background-in-background-chooser.patch  get-os-version-from-gooroom-info-not-os-release.patch  gooroom-01-add-font-feature.patch  gooroom-02-add-themes-feature.patch  gooroom-03-add-white-list-feature.patch  gooroom-04-all-fixes.patch  gooroom-05-cutomize-font-chooser-from-gtk.patch  gooroom-06-fixed-wifi-panel-title-bar.patch  gooroom-07-removed-always-show-universial-access-menu.patch  gooroom-08-Add-disconnected-title-in-wifi-panel.patch  gooroom-09-Hidden-search-sharing-online-accounts.patch  gooroom-10-fixed-theme-load.patch  gooroom-11-Modified-display-minimum-size.patch  gooroom-12-Update-po.ko-Disabled-high-contrast-and-scale-display.patch  gooroom-13-Updated-translation-ko-file-and-change-xml-file.patch  gooroom-14-Fixed-search-entry-completion-in-datetime.patch  gooroom-15-Updated-ko-po-and-email-default-mime-on-context-menu.patch  gooroom-16-Disabled-speaker-test-in-sound-panel.patch  gooroom-17-Removed-clean-head-printer.patch  gooroom-18-Fixed-color-ui-file.patch  gooroom-19-Change-suspends-on-combo-items-in-power-panel.patch  gooroom-20-Fixed-preview-text-in-font-chooser-widget.patch  gooroom-21-Removed-local-user-auto-login.patch  gooroom-22-Change-default-background-style-to-zoom.patch  gooroom-23-Added-Lock-screen-theme.patch  gooroom-24-Fixed-theme-panel.patch  gooroom-25-Fixed-duplicated-shortcut-key.patch  gooroom-26-Fixed-date-time-setting-error.patch  (+68 more)
panels/: meson.build
panels/background/: background-chooser.ui  background.gresource.xml  bg-colors-source.c  bg-source.c  bg-source.h  bg-wallpapers-source.c  cc-background-chooser.c  cc-background-chooser.h  cc-background-panel.c  cc-background-panel.ui  cc-background-preview.ui  meson.build  style.css
panels/color/: cc-color-panel.c  cc-color-panel.ui
panels/common/: cc-language-chooser.c
panels/datetime/: big.ui  cc-datetime-panel.c  cc-datetime-panel.ui  little.ui  middle.ui  ydm.ui
panels/default-apps/: cc-default-apps-panel.c
panels/display/: cc-display-panel.c  cc-night-light-page.c  cc-night-light-page.ui
panels/font/: cc-font-button.c  cc-font-button.h  cc-font-chooser-dialog.c  cc-font-chooser-dialog.h  cc-font-chooser-private.h  cc-font-chooser-utils.c  cc-font-chooser-utils.h  cc-font-chooser-widget.c  cc-font-chooser-widget.h  cc-font-chooser.c  cc-font-chooser.h  cc-font-define.h  cc-font-panel.c  cc-font-panel.h  font-button.ui  font-chooser-dialog.ui  font-chooser-widget.ui  font.gresource.xml  font.ui  gnome-font-panel.desktop.in.in  meson.build
panels/info-overview/: cc-info-overview-panel.c  cc-info-overview-panel.ui
panels/keyboard/: 01-input-sources.xml.in  01-launchers.xml.in  01-screenshot.xml.in  50-accessibility.xml.in  cc-alt-chars-key-dialog.c  cc-keyboard-item.c  cc-keyboard-option.c  cc-keyboard-panel.c  cc-keyboard-panel.ui  cc-keyboard-shortcut-editor.c  cc-keyboard-shortcut-editor.ui  keyboard-shortcuts.c
panels/mouse/: cc-mouse-caps-helper.c  cc-mouse-panel.c  (+1 more)
panels/region/: cc-format-chooser.c  cc-format-chooser.ui  cc-input-chooser.c  cc-input-chooser.ui  cc-region-panel.c  cc-region-panel.ui  gnome-region-panel.desktop.in.in  meson.build  org.gnome.controlcenter.region.policy.in.in
panels/themes/: cc-themes-panel.c  cc-themes-panel.h  cc-themes-theme.c  cc-themes-theme.h  gnome-themes-panel.desktop.in.in  meson.build  style.css  themes-theme.ui  themes.gresource.xml  themes.ui
panels/themes/data/: meson.build
panels/themes/data/themes/: gooroom-themes.ini.in.in  meson.build
po/: POTFILES.in  en.po  en_GB.po  ko.po
shell/: cc-application.c  cc-panel-list.c  cc-panel-list.h  cc-panel-list.ui  cc-panel-loader.c  cc-shell-model.c  cc-window.c  cc-window.ui  org.gnome.ControlCenter.gschema.xml
(+220 files in other folders)
